# cs550nn

./: .gitignore  README  README.md
conv_550/: CMakeLists.txt  PlotResults.ipynb  convolutionKernel.cu  convolutionSeparable  profilingSampleResults.txt  raw_results.txt  readme.txt  results.csv  results.xlsx  resultsImageSizeThroughput.csv  resultsThroughput.csv  resultsTime.csv  tableThroghput.csv  (+1 more)
genann_edited/: CMakeLists.txt  README.md  example1.cu  example4.cu  genann.c  genann.h  genann_backprop_edits.c  genann_backprop_edits.cu  genann_parallel.cu  mnist.cu  mnist.cuh  runmnist.cu  runmnist_profiling.cu
genann_edited/5epoch/: 5epoch.sln
genann_edited/5epoch/5epoch/: 5epoch.vcxproj
genann_edited/5epoch/5epoch/x64/Debug/: genann_parallel.cu.cache  genann_parallel.cu572773077.deps  runmnist_profiling.cu-1870272068.deps  runmnist_profiling.cu.cache
genann_edited/5epoch/5epoch/x64/Debug/5epoch.tlog/: 5epoch.lastbuildstate
genann_edited/batch/: batch.sln
genann_edited/batch/batch/: batch.vcxproj
genann_edited/batch/batch/x64/Debug/: genann_batch.cu.cache  mnist.cu-1924796607.deps  mnist.cu.cache  runmnist.cu-1132317470.deps  runmnist.cu.cache
genann_edited/batch/batch/x64/Debug/batch.tlog/: batch.lastbuildstate
genann_edited/ben/: Makefile  ben  ben.c  ben.cu  ben.c~  bencu  genann.h
genann_edited/bill/: bill.sln
genann_edited/data/dataprocessing/: dataprocessing.sln
genann_edited/data/dataprocessing/dataprocessing/: DataProcessing.c  dataprocessing.csproj
genann_edited/data/dataprocessing/dataprocessing/Properties/: AssemblyInfo.cs
(+46 files in other folders)
